# pre-commit-hooks

./: .pre-commit-hooks.yaml  setup.cfg
.github/workflows/: validate-manifest.yaml
eos_pre_commit_hooks/: eos_test_check_argument_order.py  eos_test_check_references.py  eos_test_ordereddict_usage.py
