[metadata]
name = eos_pre_commit_hooks
version = 1.0.0
description = EOS specific hooks for pre-commit.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/eos/pre-commit-hooks
author = Danny van Dyk
author_email = danny.van.dyk@gmail.com
license = MIT
license_files = LICENSE
classifiers =
    License :: OSI Approved :: MIT License
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: Implementation :: CPython
    Programming Language :: Python :: Implementation :: PyPy

[options]
packages = eos_pre_commit_hooks
install_requires = pre_commit_hooks
python_requires = >=3.7

[options.packages.find]
exclude =
    tests*
    testing*

[options.entry_points]
console_scripts =
    eos-test-check-argument-order = eos_pre_commit_hooks.eos_test_check_argument_order:main

[bdist_wheel]
universal = True

[coverage:run]
plugins = covdefaults

[mypy]
check_untyped_defs = true
disallow_any_generics = true
disallow_incomplete_defs = true
disallow_untyped_defs = true
warn_redundant_casts = true
warn_unused_ignores = true

[mypy-testing.*]
disallow_untyped_defs = false

[mypy-tests.*]
disallow_untyped_defs = false
